staging/apps/keycloak/keycloak-overrides.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
spec:
  template:
    spec:
      imagePullSecrets:
        - name: images-pull
      containers:
        - name: keycloak
          image: ferlabcrsj/cqdg-keycloak:1c259e9380d4d8ac0391d293c7267c1f7cb81178
          volumeMounts:
            - name: ca-certificate
              mountPath: /opt/ca
              readOnly: true
      volumes:
        - name: ca-certificate
          secret:
            secretName: postgres-qa-ca-certificate
            defaultMode: 0555
